--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
 
         <div class="icons">
-            <a href="#"><ion-icon name="logo-linkedIn"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-Snapchat"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/arun-g-karur?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><ion-icon name="logo-linkedIn"></ion-icon></a>
+            <a href="https://www.instagram.com/smiley__kid__x?igsh=MXA4ZGUzZXo2OXZ1Yw=="><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="https://www.snapchat.com/add/moonlight_4here?share_id=gU7vnu6edDw&locale=en-US"><ion-icon name="logo-Snapchat"></ion-icon></a>
         </div>
     </div>
 
