--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>ARUN-Portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="contact" href="style1.css">
 </head>
 <body>
     
@@ -16,7 +17,9 @@
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">SKILLS</a></li>
                 <li><a href="#">MY WORKS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="style1.css">CONTACT</a></li>
+
             </ul>
         </div>
 
